--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^22.6.2"
+    "express": "*",
+    "puppeteer": "*",
+    "puppeteer-core": "*",
+    "chromium": "*"
   }
 }
